--- a/_ViewImports.cshtml
+++ b/_ViewImports.cshtml
@@ -1,1 +1,4 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using Tutorial.Web.Models
+@using Tutorial.Web.ViewModels
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Tutorial.Web
