--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using Tutorial.Web.Models
-@model Tutorial.Web.ViewModels.StudentCreateViewModel
+﻿@model StudentCreateViewModel
 
 <h1>创建学生</h1>
 
